syntax = "proto3";

import "google/protobuf/timestamp.proto";

package authentication;

option go_package = "../internal/pb";

service AuthenticationService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    google.protobuf.Timestamp date_of_birth = 5;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
    string verification_token = 3;
}

message AuthenticateRequest {
    string email = 1;
    string password = 2;
}

message AuthenticateResponse {
    string auth_token = 1;
    google.protobuf.Timestamp auth_token_expiry = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp refresh_token_expiry = 4;
    string user_email = 5;
}